<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="central_park">225 Central Park West, NY 10024, USA</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="catering">Catering</string>
    <string name="curbside">Curbside</string>
    <string name="find_store_by_name">Find store by name</string>
    <string name="takeaways">Takeaways</string>
    <string name="cakes">Cakes</string>
    <string name="grocery">Grocery</string>
    <string name="convenience">Convenience</string>
    <string name="_58">58</string>
    <string name="stores_open">stores Open</string>
    <string name="burger_craze">Burger Craze</string>
    <string name="open">OPEN</string>
    <string name="_15_20_min">15-20 min</string>
    <string name="_4_6_601">4.6 (601)</string>
    <string name="american_burgers">American • Burgers</string>
    <string name="delivery_free_minimum_10">Delivery: FREE  •  Minimum: $10</string>
</resources>